# Aether-eye

./: .dockerignore  .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  config.yaml  conftest.py  deleted_files_git.txt  docker-compose.yml  export_aircraft_detector_onnx.py  pytest.ini  requirements.txt  requirements_inference.txt  run_training.py  run_training_debug.py  run_training_production.py  run_yolo_hierarchical.py  test_inference_pipeline.py  test_yolo.py  train_aircraft_classification.py  train_change_detection.py
backend/: Dockerfile  alembic.ini  requirements.txt
docs/: ARCHITECTURE.md  DEPLOYMENT.md  MODEL_TRAINING.md  (+2 more)
ml-core/: README.md  pyproject.toml  train_aircraft.py  train_change.py
ml-core/aether_ml/: __init__.py
ml-core/aether_ml/config/: __init__.py  change_unet.py  fgvc_vit.py  siamese_change.py  yolov8_aircraft.py
ml-core/aether_ml/explainability/: __init__.py  vit_gradcam.py
ml-core/aether_ml/pipelines/: change_detection.py  change_detection_onnx.py  change_semantic.py
ml-core/aether_ml/pipelines/classification/: vit_aircraft.py
ml-core/aether_ml/training/: __init__.py  fgvc_vit.py  siamese_unet_change.py
ml-core/change_detection/siamese_unet/: check_change_onnx_parity.py  export_change_onnx.py  train_change_detection.py
ml-core/classification/vit_aircraft/: check_aircraft_onnx_parity.py  train_aircraft_classification.py
ml-core/detection/yolo_aircraft/: export_aircraft_detector_onnx.py
ml-core/intelligence/: timeline_engine.py
ml-core/scripts/: export_aircraft_onnx.py  export_change_onnx.py
(+204 files in other folders)
